atualiza arquivos do site

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
     <section class="footer">
        <div class="basefooter">
-          <textarea id="userInput" class="input" placeholder="Digite aqui" rows="1"></textarea>
+          <input type="text" id="userInput" class="input" placeholder="Digite aqui" />
           <button id="sendButton" class="send-button">
               <img src="https://cdn.prod.website-files.com/67f6fb8ae7a62f40717e9500/67f6fc4b82fe3f5692e04c30_btn-enviar.svg" loading="lazy" alt="Enviar" class="btnenviar"/>
           </button>
