--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <section class="header">
-        <img src="https://cdn.prod.website-files.com/67f6fb8ae7a62f40717e9500/67f6fc4a7412197f7fd9248a_logo-rei-pitaco.svg" loading="lazy" alt="Rei do Pitaco" class="logorei"/>
+        <a href="https://reidopitaco.bet.br/">
+            <img src="https://cdn.prod.website-files.com/67f6fb8ae7a62f40717e9500/67f6fc4a7412197f7fd9248a_logo-rei-pitaco.svg" loading="lazy" alt="Rei do Pitaco" class="logorei"/>
+        </a>
     </section>
     <section class="content">
        <div class="basecontent">
